switch to jvm