@@ -1,5 +1,6 @@
-FROM fedora:41
+FROM docker.io/library/eclipse-temurin:21-jdk-jammy
+LABEL org.opencontainers.image.source=https://github.com/opendonationasssistant/oda-automation-service
 WORKDIR /app
-COPY target/oda-automation-service /app
+COPY target/oda-automation-service-0.1.jar /app
 
-CMD ["./oda-automation-service"]
+CMD ["java","--add-opens","java.base/java.time=ALL-UNNAMED","-jar","oda-automation-service-0.1.jar"]
